--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -11,32 +11,24 @@
       font-family: 'Montserrat', sans-serif;
     }
 
-    .blue-room, .green-room, .red-room {
-      padding: 40px 20px;
-    }
-
-    .blue-room {
+    .logo-section {
       background-color: #064D95;
-    }
-
-    .green-room {
-      background-color: #06954E;
-    }
-
-    .red-room {
-      background-color: #950606;
+      padding-top: 20px;
+      padding-bottom: 0;
+      text-align: center;
     }
 
     .logo-img {
-      display: block;
-      margin: 20px auto 10px;
       max-width: 125px;
       height: auto;
+      display: block;
+      margin: 0 auto 10px;
     }
 
     .page-title {
       text-align: center;
-      margin-bottom: 10px;
+      padding-top: 0;
+      background-color: #064D95;
     }
 
     .page-title h1 {
@@ -44,12 +36,24 @@
       font-style: italic;
       font-family: 'Poppins', sans-serif;
       color: white;
-      text-shadow: 0 0 8px #72c7ff, 0 0 12px #72c7ff;
+      text-shadow: 0 0 8px #ff00ff, 0 0 12px #ff00ff;
+      margin: 0 0 10px;
     }
+
+    .container {
+      padding: 20px 20px 10px;
+      border-radius: 0;
+      max-width: 700px;
+      margin: auto;
+    }
+
+    .blue-room .container { background-color: #064D95; }
+    .green-room .container { background-color: #06954E; }
+    .red-room .container { background-color: #950606; }
 
     .find-type-btn {
       text-align: center;
-      margin: 30px 0;
+      margin: 30px 0 20px;
     }
 
     .find-type-btn a {
@@ -59,20 +63,22 @@
       border-radius: 10px;
       text-decoration: none;
       border: 2px solid white;
+      transition: background-color 0.3s ease, transform 0.2s ease;
       color: white;
-      background-color: transparent;
       display: inline-block;
-      transition: transform 0.2s ease;
     }
 
     .find-type-btn a:hover {
       transform: scale(1.05);
     }
 
+    .blue-btn a { background-color: #064D95; }
+    .green-btn a { background-color: #06954E; }
+    .red-btn a { background-color: #950606; }
+
     .archetype-card {
       margin: 40px auto;
       text-align: center;
-      max-width: 700px;
     }
 
     .image-container {
@@ -83,13 +89,13 @@
       width: 100%;
       margin-bottom: 16px;
       pointer-events: none;
-      -webkit-user-select: none;
       user-select: none;
     }
 
     .image-pair {
       display: flex;
-      height: auto;
+      height: 240px;
+      position: relative;
     }
 
     .image-pair img {
@@ -98,12 +104,13 @@
       object-fit: cover;
       display: block;
       pointer-events: none;
-      -webkit-user-drag: none;
+      user-select: none;
     }
 
     .divider {
       width: 4px;
       background-color: gold;
+      height: 100%;
     }
 
     .slogan {
@@ -132,173 +139,217 @@
 <body>
 
 <!-- LOGO + TITLE -->
-<div class="blue-room">
+<div class="logo-section">
   <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
-  <div class="page-title">
-    <h1>Sexual Profiles</h1>
-  </div>
-  <div class="find-type-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
+</div>
+<div class="page-title">
+  <h1>Sexual Profiles</h1>
+</div>
 
-  <!-- BLUE ROOM Archetypes -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
-        <div class="divider"></div>
-        <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
-      </div>
+<!-- BLUE ROOM -->
+<div class="blue-room">
+  <div class="container">
+    <div class="find-type-btn blue-btn">
+      <a href="index.html">Find Your Type</a>
     </div>
-    <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
-    <p class="slogan">Nothing is as kinky as loyalty.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
-        <div class="divider"></div>
-        <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
-      </div>
+    <!-- Tender Protector -->
+    <div class="archetype-card">
+      <a href="tender-protector.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
+            <div class="divider"></div>
+            <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="tender-protector.html">Tender Protector</a></h3>
+      <p class="slogan">You lead with gravity, not volume.</p>
     </div>
-    <h3><a href="tender-protector.html">Tender Protector</a></h3>
-    <p class="slogan">You lead with gravity, not volume.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
-        <div class="divider"></div>
-        <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
-      </div>
+    <!-- Devoted Darling -->
+    <div class="archetype-card">
+      <a href="devoted-darling.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
+            <div class="divider"></div>
+            <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+      <p class="slogan">Nothing is as kinky as loyalty.</p>
     </div>
-    <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
-    <p class="slogan">You match their vibe—and raise it.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
-        <div class="divider"></div>
-        <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
-      </div>
+    <!-- Heatwave -->
+    <div class="archetype-card">
+      <a href="heatwave.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
+            <div class="divider"></div>
+            <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="heatwave.html">Heatwave</a></h3>
+      <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
     </div>
-    <h3><a href="heatwave.html">Heatwave</a></h3>
-    <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
+
+    <!-- Mood Multiplier -->
+    <div class="archetype-card">
+      <a href="mood-multiplier.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
+            <div class="divider"></div>
+            <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+      <p class="slogan">You match their vibe—and raise it.</p>
+    </div>
   </div>
 </div>
+
 <!-- GREEN ROOM -->
 <div class="green-room">
-  <div class="find-type-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
-
-  <!-- GREEN ROOM Archetypes -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
-        <div class="divider"></div>
-        <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
-      </div>
+  <div class="container">
+    <div class="find-type-btn green-btn">
+      <a href="index.html">Find Your Type</a>
     </div>
-    <h3><a href="generous-giver.html">Generous Giver</a></h3>
-    <p class="slogan">You have so much to give, you just need someone to give it to.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
-        <div class="divider"></div>
-        <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
-      </div>
+    <!-- Charmer in Charge -->
+    <div class="archetype-card">
+      <a href="charmer-in-charge.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
+            <div class="divider"></div>
+            <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+      <p class="slogan">You don’t just take control. You make them beg for it.</p>
     </div>
-    <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
-    <p class="slogan">I'm up for anything and down to get dirty.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
-        <div class="divider"></div>
-        <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
-      </div>
+    <!-- Promiscuous Plaything -->
+    <div class="archetype-card">
+      <a href="promiscuous-plaything.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
+            <div class="divider"></div>
+            <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+      <p class="slogan">Are you ready for a wild ride!</p>
     </div>
-    <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
-    <p class="slogan">Are you ready for a wild ride!</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
-        <div class="divider"></div>
-        <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
-      </div>
+    <!-- Bedroom Adventurer -->
+    <div class="archetype-card">
+      <a href="bedroom-adventurer.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
+            <div class="divider"></div>
+            <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+      <p class="slogan">I'm up for anything and down to get down and dirty.</p>
     </div>
-    <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
-    <p class="slogan">You don’t just take control. You make them beg for it.</p>
+
+    <!-- Generous Giver -->
+    <div class="archetype-card">
+      <a href="generous-giver.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
+            <div class="divider"></div>
+            <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="generous-giver.html">Generous Giver</a></h3>
+      <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+    </div>
   </div>
 </div>
 
 <!-- RED ROOM -->
 <div class="red-room">
-  <div class="find-type-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
-
-  <!-- RED ROOM Archetypes -->
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
-        <div class="divider"></div>
-        <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
-      </div>
+  <div class="container">
+    <div class="find-type-btn red-btn">
+      <a href="index.html">Find Your Type</a>
     </div>
-    <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
-    <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
-        <div class="divider"></div>
-        <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
-      </div>
+    <!-- Dungeon Master -->
+    <div class="archetype-card">
+      <a href="dungeon-master.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
+            <div class="divider"></div>
+            <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+      <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
     </div>
-    <h3><a href="the-punish-me.html">The Punish Me</a></h3>
-    <p class="slogan">What you call defiance, I call foreplay.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
-        <div class="divider"></div>
-        <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
-      </div>
+    <!-- Claimed & Trained -->
+    <div class="archetype-card">
+      <a href="claimed-and-trained.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
+            <div class="divider"></div>
+            <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
+      <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
     </div>
-    <h3><a href="the-provoker.html">The Provoker</a></h3>
-    <p class="slogan">You press buttons—on purpose.</p>
-  </div>
 
-  <div class="archetype-card">
-    <div class="image-container">
-      <div class="image-pair">
-        <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
-        <div class="divider"></div>
-        <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
-      </div>
+    <!-- The Provoker -->
+    <div class="archetype-card">
+      <a href="the-provoker.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
+            <div class="divider"></div>
+            <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="the-provoker.html">The Provoker</a></h3>
+      <p class="slogan">You press buttons—on purpose.</p>
     </div>
-    <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
-    <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
+
+    <!-- The Punish Me -->
+    <div class="archetype-card">
+      <a href="the-punish-me.html">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
+            <div class="divider"></div>
+            <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
+          </div>
+        </div>
+      </a>
+      <h3><a href="the-punish-me.html">The Punish Me</a></h3>
+      <p class="slogan">What you call defiance, I call foreplay.</p>
+    </div>
   </div>
 </div>
 
