--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -11,24 +11,43 @@
       font-family: 'Montserrat', sans-serif;
     }
 
-    .logo-section {
+    .blue-room {
       background-color: #064D95;
-      padding-top: 20px;
-      padding-bottom: 0;
-      text-align: center;
+      padding: 20px 15px 0;
+    }
+
+    .green-room {
+      background-color: #06954E;
+      padding: 20px 15px 0;
+    }
+
+    .red-room {
+      background-color: #950606;
+      padding: 20px 15px 40px;
     }
 
     .logo-img {
-      max-width: 125px;
-      height: auto;
       display: block;
-      margin: 0 auto 10px;
+      margin: 10px auto 0;
+      max-width: 120px;
+      height: auto;
     }
 
     .page-title {
       text-align: center;
-      padding-top: 0;
-      background-color: #064D95;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      position: relative;
+    }
+
+    .page-title::before,
+    .page-title::after {
+      content: "";
+      display: block;
+      height: 1px;
+      background-color: white;
+      margin: 8px auto;
+      max-width: 260px;
     }
 
     .page-title h1 {
@@ -36,24 +55,14 @@
       font-style: italic;
       font-family: 'Poppins', sans-serif;
       color: white;
-      text-shadow: 0 0 8px #ff00ff, 0 0 12px #ff00ff;
-      margin: 0 0 10px;
+      text-align: center;
+      text-shadow: 0 0 6px #5ac8fa, 0 0 12px #5ac8fa;
+      margin: 0;
     }
-
-    .container {
-      padding: 20px 20px 10px;
-      border-radius: 0;
-      max-width: 700px;
-      margin: auto;
-    }
-
-    .blue-room .container { background-color: #064D95; }
-    .green-room .container { background-color: #06954E; }
-    .red-room .container { background-color: #950606; }
 
     .find-type-btn {
       text-align: center;
-      margin: 30px 0 20px;
+      margin: 28px 0;
     }
 
     .find-type-btn a {
@@ -68,16 +77,12 @@
       display: inline-block;
     }
 
-    .find-type-btn a:hover {
-      transform: scale(1.05);
-    }
-
     .blue-btn a { background-color: #064D95; }
     .green-btn a { background-color: #06954E; }
     .red-btn a { background-color: #950606; }
 
     .archetype-card {
-      margin: 40px auto;
+      margin: 35px auto;
       text-align: center;
     }
 
@@ -87,15 +92,12 @@
       overflow: hidden;
       display: inline-block;
       width: 100%;
-      margin-bottom: 16px;
-      pointer-events: none;
-      user-select: none;
+      margin-bottom: 12px;
     }
 
     .image-pair {
       display: flex;
-      height: 240px;
-      position: relative;
+      height: 250px;
     }
 
     .image-pair img {
@@ -113,14 +115,6 @@
       height: 100%;
     }
 
-    .slogan {
-      font-style: italic;
-      margin-top: 10px;
-      font-size: 1rem;
-      line-height: 1.4;
-      color: white;
-    }
-
     h3 {
       margin: 8px 0 4px;
     }
@@ -134,222 +128,194 @@
     h3 a:hover {
       text-decoration: underline;
     }
+
+    .slogan {
+      font-style: italic;
+      margin-top: 4px;
+      font-size: 1rem;
+      color: white;
+      line-height: 1.4;
+    }
   </style>
 </head>
 <body>
 
-<!-- LOGO + TITLE -->
-<div class="logo-section">
-  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
-</div>
-<div class="page-title">
-  <h1>Sexual Profiles</h1>
-</div>
-
-<!-- BLUE ROOM -->
 <div class="blue-room">
-  <div class="container">
-    <div class="find-type-btn blue-btn">
-      <a href="index.html">Find Your Type</a>
-    </div>
+  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
+  <div class="page-title">
+    <h1>Sexual Profiles</h1>
+  </div>
+  <div class="find-type-btn blue-btn">
+    <a href="index.html">Find Your Type</a>
+  </div>
 
-    <!-- Tender Protector -->
-    <div class="archetype-card">
-      <a href="tender-protector.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
-            <div class="divider"></div>
-            <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="tender-protector.html">Tender Protector</a></h3>
-      <p class="slogan">You lead with gravity, not volume.</p>
+  <!-- Submissive -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="tender-protector.html"><img src="images/tender_protector_female.jpg" alt="Tender Protector - Female"></a>
+        <div class="divider"></div>
+        <a href="tender-protector.html"><img src="images/tender_protector_male.jpg" alt="Tender Protector - Male"></a>
+      </div>
     </div>
+    <h3><a href="tender-protector.html">Tender Protector</a></h3>
+    <p class="slogan">You lead with gravity, not volume.</p>
+  </div>
 
-    <!-- Devoted Darling -->
-    <div class="archetype-card">
-      <a href="devoted-darling.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
-            <div class="divider"></div>
-            <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
-      <p class="slogan">Nothing is as kinky as loyalty.</p>
+  <!-- Role Switch -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="devoted-darling.html"><img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female"></a>
+        <div class="divider"></div>
+        <a href="devoted-darling.html"><img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male"></a>
+      </div>
     </div>
+    <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+    <p class="slogan">Nothing is as kinky as loyalty.</p>
+  </div>
 
-    <!-- Heatwave -->
-    <div class="archetype-card">
-      <a href="heatwave.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
-            <div class="divider"></div>
-            <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="heatwave.html">Heatwave</a></h3>
-      <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
+  <!-- Mood Switch -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="mood-multiplier.html"><img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female"></a>
+        <div class="divider"></div>
+        <a href="mood-multiplier.html"><img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male"></a>
+      </div>
     </div>
+    <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+    <p class="slogan">You match their vibe—and raise it.</p>
+  </div>
 
-    <!-- Mood Multiplier -->
-    <div class="archetype-card">
-      <a href="mood-multiplier.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
-            <div class="divider"></div>
-            <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
-      <p class="slogan">You match their vibe—and raise it.</p>
+  <!-- Dominant -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="heatwave.html"><img src="images/heatwave_female.jpg" alt="Heatwave - Female"></a>
+        <div class="divider"></div>
+        <a href="heatwave.html"><img src="images/heatwave_male.jpg" alt="Heatwave - Male"></a>
+      </div>
     </div>
+    <h3><a href="heatwave.html">Heatwave</a></h3>
+    <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
   </div>
 </div>
-
 <!-- GREEN ROOM -->
 <div class="green-room">
-  <div class="container">
-    <div class="find-type-btn green-btn">
-      <a href="index.html">Find Your Type</a>
-    </div>
+  <div class="find-type-btn green-btn">
+    <a href="index.html">Find Your Type</a>
+  </div>
 
-    <!-- Charmer in Charge -->
-    <div class="archetype-card">
-      <a href="charmer-in-charge.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
-            <div class="divider"></div>
-            <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
-      <p class="slogan">You don’t just take control. You make them beg for it.</p>
+  <!-- Submissive -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="generous-giver.html"><img src="images/generous_giver_female.jpg" alt="Generous Giver - Female"></a>
+        <div class="divider"></div>
+        <a href="generous-giver.html"><img src="images/generous_giver_male.jpg" alt="Generous Giver - Male"></a>
+      </div>
     </div>
+    <h3><a href="generous-giver.html">Generous Giver</a></h3>
+    <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+  </div>
 
-    <!-- Promiscuous Plaything -->
-    <div class="archetype-card">
-      <a href="promiscuous-plaything.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
-            <div class="divider"></div>
-            <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
-      <p class="slogan">Are you ready for a wild ride!</p>
+  <!-- Role Switch -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="bedroom-adventurer.html"><img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female"></a>
+        <div class="divider"></div>
+        <a href="bedroom-adventurer.html"><img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male"></a>
+      </div>
     </div>
+    <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+    <p class="slogan">I'm up for anything and down to get dirty.</p>
+  </div>
 
-    <!-- Bedroom Adventurer -->
-    <div class="archetype-card">
-      <a href="bedroom-adventurer.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
-            <div class="divider"></div>
-            <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
-      <p class="slogan">I'm up for anything and down to get down and dirty.</p>
+  <!-- Mood Switch -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="promiscuous-plaything.html"><img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female"></a>
+        <div class="divider"></div>
+        <a href="promiscuous-plaything.html"><img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male"></a>
+      </div>
     </div>
+    <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+    <p class="slogan">Are you ready for a wild ride?</p>
+  </div>
 
-    <!-- Generous Giver -->
-    <div class="archetype-card">
-      <a href="generous-giver.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
-            <div class="divider"></div>
-            <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="generous-giver.html">Generous Giver</a></h3>
-      <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+  <!-- Dominant -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="charmer-in-charge.html"><img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female"></a>
+        <div class="divider"></div>
+        <a href="charmer-in-charge.html"><img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male"></a>
+      </div>
     </div>
+    <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+    <p class="slogan">You don’t just take control. You make them beg for it.</p>
   </div>
 </div>
 
 <!-- RED ROOM -->
 <div class="red-room">
-  <div class="container">
-    <div class="find-type-btn red-btn">
-      <a href="index.html">Find Your Type</a>
-    </div>
+  <div class="find-type-btn red-btn">
+    <a href="index.html">Find Your Type</a>
+  </div>
 
-    <!-- Dungeon Master -->
-    <div class="archetype-card">
-      <a href="dungeon-master.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
-            <div class="divider"></div>
-            <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
-      <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
+  <!-- Submissive -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="punish-me.html"><img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female"></a>
+        <div class="divider"></div>
+        <a href="punish-me.html"><img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male"></a>
+      </div>
     </div>
+    <h3><a href="punish-me.html">The Punish Me</a></h3>
+    <p class="slogan">What you call defiance, I call foreplay.</p>
+  </div>
 
-    <!-- Claimed & Trained -->
-    <div class="archetype-card">
-      <a href="claimed-and-trained.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
-            <div class="divider"></div>
-            <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
-      <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
+  <!-- Role Switch -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="the-provoker.html"><img src="images/the_provoker_female.jpg" alt="The Provoker - Female"></a>
+        <div class="divider"></div>
+        <a href="the-provoker.html"><img src="images/the_provoker_male.jpg" alt="The Provoker - Male"></a>
+      </div>
     </div>
+    <h3><a href="the-provoker.html">The Provoker</a></h3>
+    <p class="slogan">You press buttons—on purpose.</p>
+  </div>
 
-    <!-- The Provoker -->
-    <div class="archetype-card">
-      <a href="the-provoker.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
-            <div class="divider"></div>
-            <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="the-provoker.html">The Provoker</a></h3>
-      <p class="slogan">You press buttons—on purpose.</p>
+  <!-- Mood Switch -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="claimed-and-trained.html"><img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female"></a>
+        <div class="divider"></div>
+        <a href="claimed-and-trained.html"><img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male"></a>
+      </div>
     </div>
+    <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
+    <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
+  </div>
 
-    <!-- The Punish Me -->
-    <div class="archetype-card">
-      <a href="the-punish-me.html">
-        <div class="image-container">
-          <div class="image-pair">
-            <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
-            <div class="divider"></div>
-            <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
-          </div>
-        </div>
-      </a>
-      <h3><a href="the-punish-me.html">The Punish Me</a></h3>
-      <p class="slogan">What you call defiance, I call foreplay.</p>
+  <!-- Dominant -->
+  <div class="archetype-card">
+    <div class="image-container">
+      <div class="image-pair">
+        <a href="dungeon-master.html"><img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female"></a>
+        <div class="divider"></div>
+        <a href="dungeon-master.html"><img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male"></a>
+      </div>
     </div>
+    <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+    <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
   </div>
 </div>
 
